make logo smaller on mobile to avoid overflow into burger

--- a/static/benchmarks/css/competition.sass
+++ b/static/benchmarks/css/competition.sass
@@ -1,15 +1,14 @@
-.navbar-competition
-  background-color: rgb(7, 137, 48)
-  color: white
-  border-radius: 6px
+#navbar-competition-logo
+  @media (max-width: 450px)
+    max-width: 280px
+  @media (max-width: 350px)
+    max-width: 180px
 
-  &:hover
-    border: 1px solid $brain-score-color
 
 .competition-hero
 
   background: $brain-score-color
-  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(7,137,48,1) 54%, rgba(69,252,179,1) 100%)
+  background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(7, 137, 48, 1) 54%, rgba(69, 252, 179, 1) 100%)
 
   .title
     color: white
